--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,30 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body data-spy="scroll" data-target="#navbar" data-offset="50">
-  <header class="d-flex justify-content-between align-items-center sticky-top bg-dark">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark w-100"  id="navbar">
-      <div class="container-fluid w-100" >
+  <header class="d-flex flex-column justify-content-between align-items-center sticky-top ">
+    <nav class="navbar navbar-expand-md w-md-50 navbar-dark w-100" id="navbar">
+      <div class="container-fluid w-100 flex-wrap justify-content-md-betwent p-0">
         <section class="navbar-brand logo">
           <a href="/">
             <h1>Rojas</h1>
           </a>
         </section>
-        <button class="navbar-toggler hamburger" type="button" data-toggle="collapse" data-target="#menu" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler hamburger border-0" type="button" data-toggle="collapse" data-target="#menu"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse desplegable" id="menu">
-          <ul class="nav navbar-nav  me-auto" role="tablist" >
+        <div class="collapse navbar-collapse desplegable " id="menu">
+          <ul class="nav navbar-nav  me-auto primary-menu" role="tablist">
             <li class="nav-item text-center">
-              <a class="nav-link " href="#home">home</a>
+              <a class="nav-link active" href="#home">Home</a>
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="#About">About me</a>
-            </li>
-            <li class="nav-item text-center">
-              <a class="nav-link" href="#Experience">Experience</a>
-            </li>
-            <li class="nav-item text-center">
-              <a class="nav-link" href="#Education">Education</a>
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="#Skills">Skills</a>
@@ -41,63 +39,130 @@
             <li class="nav-item text-center">
               <a class="nav-link" href="#Proyects">Proyects</a>
             </li>
+            <li class="nav-item text-center">
+              <a class="nav-link" href="#Experience">Experience</a>
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link" href="#Education">Education</a>
+            </li>
           </ul>
-          <hr class="d-md-none text-white-50">
-          <ul class="navbar-nav flex-row flex-wrap text-light">
+          <hr class="bg-light ms-3 d-flex d-sm-none">
+          <ul class="navbar-nav flex-row flex-wrap text-light redes ms-3 d-flex d-sm-none">
             <li class="nav-item col-4 col-md-aut text-center">
               <a href="" title="Facebook">
-              <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-facebook" viewBox="0 0 16 16">
-                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-              </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-facebook" viewBox="0 0 16 16">
+                  <path
+                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                </svg>
               </a>
             </li>
             <li class="nav-item col-4 col-md-auto text-center">
               <a href="" title="Git Hub">
                 <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-github" viewBox="0 0 16 16">
-                  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                  <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                 </svg>
               </a>
             </li>
             <li class="nav-item col-4 col-md-auto text-center">
               <a href="" title="Linkedin">
                 <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-linkedin" viewBox="0 0 24 24">
-                  <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg>
+                  <path
+                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
+                  </svg>
               </a>
             </li>
           </ul>
         </div>
-        <form class="login">
-          <button class="btn btn-outline-light d-md-inline-block " type="submit">Login</button>
+        <form class="login ms-2">
+          <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Login</button>
+          <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Register</button>
         </form>
       </div>
     </nav>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark  d-none d-md-flex py-0" id="navbar">
+
+    </nav>
   </header>
-  <main >
-    <section id="home" class="bg-success">
-      <h2>Home</h2>
-      </section>
-    <section id="About" class="bg-primary">
-      <h2>About me</h2>
-      </section>
+  <main>
+    <section class="redes-nav">
+      <ul class="navbar-nav flex-column flex-nowrap text-light redes ms-3">
+        <li class="nav-item col-4 col-md-aut text-center m-2">
+          <a href="" title="Facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook"
+              viewBox="0 0 24 24" stroke-width="2"  fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <title>Facebook</title>
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+            </svg>
+          </a>
+        </li>
+        <li class="nav-item col-4 col-md-auto text-center m-2">
+          <a href="" title="Git Hub">
+            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>GitHub</title>
+              <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+          </a>
+        </li>
+        <li class="nav-item col-4 col-md-auto text-center m-2">
+          <a href="" title="Linkedin">
+            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin icon"><title>LinkedIn</title><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section id="Home" class=" hero">
+      <div class="container col-xxl-8 px-4 py-4">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-center">
+          <div class="col-lg-10 text-light herotext">
+            <span class="hi">Hi! I'm </span>
+            <h1 class="display-1 fw-bold mb-3 ">Priscilla Rojas.</h1>
+            <h3 class="display-3 fw-bold mb-3 text-muted">Full Stack Developer.</h3>
+            <p class="text">Curiosa, responsable y perfeccionista. Motivada a encontrar soluciones y crecer continuamente dondequiera que esté, tomando cada desafío como una oportunidad para mejorar.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="About" class="">
+      <div class="container col-xxl-8 px-4 py-4">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-center">
+          <div class="col-10 col-sm-8 col-lg-5 about p-0">
+            <img src="/assets/img/perfil.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              loading="lazy">
+          </div>
+          <div class="col-lg-6 text-light">
+            <h3 class="about-text">About me</h3>
+            <p class="text"></p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="Experience">
       <h2>Experience</h2>
-      </section>
+    </section>
     <section id="Education" class="bg-info">
       <h2>Education</h2>
-      </section>
+    </section>
     <section id="Skills">
       <h2>Hard and Soft Skills</h2>
-      </section>
+
+    </section>
     <section id="Proyects">
       <h2>Proyects</h2>
-      </section>
-    >
+    </section>
   </main>
 
-  
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
+  <script src="/app.js"></script>
 </body>
+
 </html>
