seccion proyect por finalizar, faltante responsive

--- a/index.html
+++ b/index.html
@@ -28,19 +28,16 @@
         <div class="collapse navbar-collapse desplegable " id="menu">
           <ul class="nav navbar-nav  me-auto primary-menu" role="tablist">
             <li class="nav-item text-center">
-              <a class="nav-link active" href="#home">Home</a>
+              <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="#About">About me</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Skills">Skills</a>
-            </li>
-            <li class="nav-item text-center">
               <a class="nav-link" href="#Proyects">Proyects</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Experience">Experience</a>
+              <a class="nav-link" href="#Skills">Skills</a>
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="#Education">Education</a>
@@ -86,7 +83,7 @@
   </header>
   <main>
     <section class="redes-nav">
-      <ul class="navbar-nav flex-column flex-nowrap text-light redes ms-3">
+      <ul class="navbar-nav flex-column flex-nowrap text-light redes">
         <li class="nav-item col-4 col-md-aut text-center m-2">
           <a href="" title="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook"
@@ -130,14 +127,143 @@
               loading="lazy">
           </div>
           <div class="col-lg-6 text-light">
-            <h3 class="about-text">About me</h3>
-            <p class="text"></p>
+            <h2 class="about-Subtitle">About me</h2>
+            <p class="text ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, earum cumque! Numquam consequuntur deleniti natus voluptate ab, porro dolores veniam sint, illo eligendi, nisi ipsum eum quaerat. Labore, alias repellat.
+            Possimus nihil recusandae a harum temporibus impedit error voluptate eligendi consequatur distinctio! Autem minus eum magni incidunt impedit repellendus, modi distinctio, error quibusdam eos voluptate officia et, dignissimos est magnam!0</p>
           </div>
         </div>
       </div>
     </section>
-    <section id="Experience">
-      <h2>Experience</h2>
+    <section id="Proyects">
+      <div class="container col-xxl-8 px-4 py-4 container-proyect ">
+        <h2 class="proyects-Subtitle">Some projects</h2>
+          <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end my-5">
+            <div class="col text-light">
+              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end containerimg">
+                <img src="/assets/imgs-proyects/soyHostel.png" class="imgProyect d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              loading="lazy">
+              </div>
+            </div>
+            <div class="col text-light text-end">
+              <h3>Soy Hostel</h3>
+              <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
+              <p>PostgreSql, Node, Express, JWT, React</p>
+              <ul class="navbar-nav flex-row flex-nowrap text-light redes justify-content-end">
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>Redirect </title>
+                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                  </a>
+                </li>
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                      <line x1="10" y1="14" x2="20" y2="4" />
+                      <polyline points="15 4 20 4 20 9" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            </div>
+          <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end my-5-">
+            <div class="col text-light">
+              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
+                <img src="/assets/imgs-proyects/recipes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              loading="lazy">
+              </div>
+            </div>
+            <div class="col text-light">
+              <h3>Recipes</h3>
+              <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
+              <p>PostgreSql, Node, Express, JWT, React</p>
+              <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>Redirect </title>
+                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                  </a>
+                </li>
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                      <line x1="10" y1="14" x2="20" y2="4" />
+                      <polyline points="15 4 20 4 20 9" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            </div>
+          <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end my-5">
+            <div class="col text-light">
+              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
+                <img src="/assets/imgs-proyects/fundacion-colombiavive.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              loading="lazy">
+              </div>
+            </div>
+            <div class="col text-light text-end">
+              <h3>FunColVive</h3>
+              <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
+              <p>PostgreSql, Node, Express, JWT, React</p>
+              <ul class="navbar-nav flex-row flex-nowrap text-light redes justify-content-end">
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>Redirect </title>
+                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                  </a>
+                </li>
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                      <line x1="10" y1="14" x2="20" y2="4" />
+                      <polyline points="15 4 20 4 20 9" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            </div>
+          <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end my-5">
+            <div class="col text-light">
+              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
+                <img src="/assets/imgs-proyects/san-martin.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              loading="lazy">
+              </div>
+            </div>
+            <div class="col text-light">
+              <h3>San Martin</h3>
+              <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
+              <p>PostgreSql, Node, Express, JWT, React</p>
+              <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>Redirect </title>
+                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                  </a>
+                </li>
+                <li class="nav-item col-4 col-md-auto text-center m-2">
+                  <a href="" title="Git Hub">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                      <line x1="10" y1="14" x2="20" y2="4" />
+                      <polyline points="15 4 20 4 20 9" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="Education" class="bg-info">
       <h2>Education</h2>
@@ -145,9 +271,6 @@
     <section id="Skills">
       <h2>Hard and Soft Skills</h2>
 
-    </section>
-    <section id="Proyects">
-      <h2>Proyects</h2>
     </section>
   </main>
 
