--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="container col-xxl-8 px-4 py-4">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-center overflow-hidden">
           <div class="col-10 col-sm-8 col-lg-5 about p-0">
-            <img src="/assets/img/perfil.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+            <img src="assets/img/perfil.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
               loading="lazy">
           </div>
           <div class="col-lg-6 text-light">
@@ -140,7 +140,7 @@
           <div class="row container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
             <div class="col text-light">
               <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end containerimg">
-                <img src="/assets/imgs-proyects/soyHostel.png" class="imgProyect d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                <img src="assets/imgs-proyects/soyHostel.png" class="imgProyect d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
               loading="lazy">
               </div>
             </div>
@@ -171,7 +171,7 @@
           <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end-">
             <div class="col text-light">
               <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="/assets/imgs-proyects/recipes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                <img src="assets/imgs-proyects/recipes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
               loading="lazy">
               </div>
             </div>
@@ -202,7 +202,7 @@
           <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
             <div class="col text-light">
               <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="/assets/imgs-proyects/fundacion-colombiavive.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                <img src="assets/imgs-proyects/fundacion-colombiavive.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
               loading="lazy">
               </div>
             </div>
@@ -233,7 +233,7 @@
           <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end">
             <div class="col text-light">
               <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="/assets/imgs-proyects/san-martin.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                <img src="assets/imgs-proyects/san-martin.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
               loading="lazy">
               </div>
             </div>
